# nowcasting-kr

./: .cursor-step-status  .gitignore  .gitmodules  AGENT.md  BENCHMARK_REPORT.md  CONFIG_STRUCTURE_PROPOSAL.md  CONTEXT.md  DDFM_COMPARISON.md  DFM_PATTERNS_0.1.3.md  DFM_PYTHON_TENT_KERNEL_ANALYSIS.md  EM_ALGORITHM_ISSUE_ANALYSIS.md  EWI.md  FEEDBACK.md  FRONTEND_FEEDBACK_RESPONSE.md  IMPROVEMENT_PLAN.md  INSPECTION_SUMMARY.md  ISSUES.md  OBJECTIVE.md  PR_DESCRIPTION.md  PR_REVIEW.md  README.md  README_DFM_WORKFLOW.md  REFACTORING_ANALYSIS.md  RESULTS_NEEDED.md  SKTIME.md  STATUS.md  TIMEMIXER_EXPLANATION.md  WORKFLOW.md  agent_execute.sh  cursor-headless.sh  database_proposals.md  debug.md  extend_test_data.py  generate_ddfm_predictions.py  generate_dfm_predictions.py  initialization.py  kalman_filter_doc.md  main.py  nowcasting_moef_share.ipynb  pyproject.toml  (+22 more)
.cursor/: FIX_SUMMARY.md  ROOT_CAUSE_ANALYSIS.md  debug_hypotheses.md  worktrees.json
adapters/: __init__.py  adapter_database.py  database.py
app/: ResDFM.pkl  __init__.py  main.py  utils.py
assets/: initialization.py  test_initialization.py
config/: README.md  default.yaml  defaults.yaml  test.yaml
data/: PROCESS.md  additional_data.csv  bok_statistics_dfm_selected.csv  bok_statistics_list.csv  consumption.csv  consumption_metadata.csv  data.csv  data.csv.backup  data_weekly_averaged.csv  investment.csv  investment_metadata.csv  metadata.csv  process_raw_data.py  production.csv  production_metadata.csv  raw_data.csv  sample_data.csv  statistics_selected.csv  test_investment.csv  test_production.csv  train_investment.csv  train_production.csv
database/: __init__.py  client.py  db_utils.py  helpers.py  models.py  operations.py  series.py  spec_manager.py  utils.py
docs/: BLOCK_DFM_UNDERSTANDING.md  DFM_MODULE_REVIEW.md  WORKFLOW_TEST_RESULTS.md
migrations/: 001_initial_schema.sql  001_initial_spec.csv  002_add_blocks.sql  002_first_updated_schema.sql  003_cleanup_unused_schema.sql  003_complete_security_redefinition.sql  003_frontend_integration.sql  003_restart.sql  003_security_fixes.sql  004_frontend_integration.sql
plans/: pytest_issues_resolution_plan.md
(+573 files in other folders)
