[project]
name = "nowcasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pillow>=10.0.0",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "sktime>=0.40.1",
    "pytorch-forecasting>=1.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.7.2",
    "transformers>=4.57.3",
    "neuralforecast>=3.1.2",
    "accelerate>=1.12.0",
    "dill>=0.4.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "einops>=0.8.1",
    "ninja>=1.13.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
